--- a/callList/index.html
+++ b/callList/index.html
@@ -69,7 +69,17 @@
           action();
         }
       };
-      $.get(url, ajaxBack);
+      //$.get(url, ajaxBack);
+      
+      $.ajax({
+        type: "GET",
+        url: url,
+        //data: "",
+        //complete: ajaxBack
+        crossDomain: true,
+        dataType: "text"
+      }).done(ajaxBack).always(function(a){console.log(a);});
+      
     }
     function downloadData(id="id", type="type", action=null) {
       if (cacheFile==null) {
