--- a/callList/index.html
+++ b/callList/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Sortable - Default functionality</title>
+  <title>叫號機</title>
   
   <style>
     #sortable { /*list-style-type: none;*/ border-spacing: 0 5px; }
@@ -18,11 +18,6 @@
   </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script>
-    $( function() {
-    } );
-  </script>
-  
   <script>
     function encodeList() {
       var encoded='';
