--- a/callList/index.html
+++ b/callList/index.html
@@ -66,8 +66,8 @@
           action();
         }
       };
-      //$.get(url, ajaxBack);
-      
+      $.get(url, ajaxBack);
+      /*
       $.ajax({
         type: "GET",
         url: url,
@@ -76,7 +76,7 @@
         crossDomain: true,
         dataType: "text"
       }).done(ajaxBack); //.always(function(a){console.log(a);});
-      
+      */
     }
     function downloadData(id, type, action) {
       if (cacheFile==null) {
