--- a/in/index.html
+++ b/in/index.html
@@ -1,4 +1,9 @@
+<style>
+  body {
+    font-size: 50px;
+  }
+</style>
 <base target="_blank">
-<a href="http://class.wolfdigit.ga/InfoIntro">plan</a>
-<a href="http://classroom.google.com">classroom</a>
+<a href="http://class.wolfdigit.ga/InfoIntro">plan</a><br>
+<a href="http://classroom.google.com">classroom</a><br>
 <a href="https://drive.google.com/drive/folders/0B65DH-sSwkNAODVBd2dvOUZGMkU">drive</a>
