--- a/in/index.html
+++ b/in/index.html
@@ -5,5 +5,5 @@
 </style>
 <base target="_blank">
 <a href="http://class.wolfdigit.ga/InfoIntro">plan</a><br>
-<a href="http://classroom.google.com">classroom</a><br>
+<a href="https://classroom.google.com/h">classroom</a><br>
 <a href="https://drive.google.com/drive/folders/0B65DH-sSwkNAODVBd2dvOUZGMkU">drive</a>
