--- a/in/index.html
+++ b/in/index.html
@@ -4,6 +4,6 @@
   }
 </style>
 <base target="_blank">
-<a href="http://class.wolfdigit.ga/InfoIntro">plan</a><br>
+<a href="https://drive.google.com/drive/folders/0B65DH-sSwkNAODVBd2dvOUZGMkU">drive</a><br>
 <a href="https://classroom.google.com/h">classroom</a><br>
-<a href="https://drive.google.com/drive/folders/0B65DH-sSwkNAODVBd2dvOUZGMkU">drive</a>
+<a href="http://class.wolfdigit.ga/InfoIntro">plan</a><br>
