--- a/pscd/index.html
+++ b/pscd/index.html
@@ -43,7 +43,7 @@ $.get( file, function( data ) {
       }
     });
     
-    if (file=='people.md') replaceIDLinks();
+    if (file=='index.md') replaceIDLinks();
   });
 }, 'text');
 </script>
