windows env & info-system.php

--- a/html/info-system.html
+++ b/html/info-system.html
@@ -135,7 +135,29 @@
         </div>
         <div class="col-md-9 order-2">
           <div class="p-5">
-            <h2 class="display-4">moodle ... classroom ...</h2>
+            <h2 class="display-4">moodle &amp; moodle3</h2>
+            <p><a href="http://moodle.lssh.tp.edu.tw">moodle</a></p>
+            <p><a href="http://moodle3.lssh.tp.edu.tw">moodle3</a></p>
+            <p>帳號/密碼: u學號 / 身分證號</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3 order-1">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=445" alt="">
+          </div>
+        </div>
+        <div class="col-md-9 order-2">
+          <div class="p-5">
+            <h2 class="display-4">google classroom</h2>
+            <p><a href="http://classroom.google.com">google classroom</a></p>
+            <p>用gmail帳號登入</p>
           </div>
         </div>
       </div>
