done info-system

--- a/html/info-system.html
+++ b/html/info-system.html
@@ -94,7 +94,8 @@
         <div class="col-md-9 order-2">
           <div class="p-5">
             <h2 class="display-4">校務系統</h2>
-            <p>網址有點難記，你就先記麗山首頁吧 <a href="http://www.lssh.tp.edu.tw" target="_blank">http://www.lssh.tp.edu.tw</a></p>
+            <p>網址有點難記，你就先記麗山首頁吧 <a href="http://www.lssh.tp.edu.tw" target="_blank">http://www.lssh.tp.edu.tw</a><br>
+               在學校首頁找到右邊「麗山網路服務」分類裡面的「學生缺曠及成績查詢」就是了</p>
             <p>你們應該有填過新生基本資料了，選社、查成績也都是這裡！</p>
             <p>帳號: 學號(不加u) 106xxxxx<br>
               預設密碼: 身分證號</p>
@@ -136,9 +137,11 @@
         <div class="col-md-9 order-2">
           <div class="p-5">
             <h2 class="display-4">moodle &amp; moodle3</h2>
-            <p><a href="http://moodle.lssh.tp.edu.tw">moodle</a></p>
-            <p><a href="http://moodle3.lssh.tp.edu.tw">moodle3</a></p>
+            <p>功能比較強大的課程平台</p>
+            <p>我們有兩個站，一個比較舊一個比較新：
+               <a href="http://moodle.lssh.tp.edu.tw">moodle</a>、<a href="http://moodle3.lssh.tp.edu.tw">moodle3</a></p>
             <p>帳號/密碼: u學號 / 身分證號</p>
+            <p>我的資訊課不是用這個，但是其他科可能會用到，所以你還是要會用</p>
           </div>
         </div>
       </div>
@@ -156,8 +159,10 @@
         <div class="col-md-9 order-2">
           <div class="p-5">
             <h2 class="display-4">google classroom</h2>
+            <p>功能比較單純的課程平台</p>
             <p><a href="http://classroom.google.com">google classroom</a></p>
             <p>用gmail帳號登入</p>
+            <p>加入到資科概的課程了嗎?</p>
           </div>
         </div>
       </div>
