--- a/html/info-system.html
+++ b/html/info-system.html
@@ -119,6 +119,7 @@
             <p>先從校務系統登入，下面的「註冊酷課雲帳號」按鈕</p>
             <p>註冊完可以用同一個帳號登入 <a href="http://cooc.tp.edu.tw" target="_blank">酷課雲</a>和
                <a href="http://onlinedb.tp.edu.tw" target="_blank">線上資料庫</a></p>
+            <p>懶人包<a target="_blank" href="https://docs.google.com/presentation/d/14o9nqhGfMycdfG3edKWr2DtIYEQsk7aus_qyil3tXY0/view">在此</a>~</p>
             <p>建議用學校信箱註冊，註冊完後再綁定google登入可以更方便使用</p>
           </div>
         </div>
