info-system-SSO & blog task

--- a/in/index.html
+++ b/in/index.html
@@ -1,9 +1,15 @@
 <style>
   body {
     font-size: 50px;
+    line-height: 1.5em;
   }
 </style>
 <base target="_blank">
-<a href="https://drive.google.com/drive/folders/0B65DH-sSwkNAODVBd2dvOUZGMkU">drive</a><br>
-<a href="https://classroom.google.com/h">classroom</a><br>
-<a href="http://class.wolfdigit.ga/InfoIntro">plan</a><br>
+<div style="height:100%; width:100%; text-align:center">
+  <div style="display:inline-block; text-align:initial">
+    <a href="http://class.wolfdigit.ga/infoIntro/timeTable.html">class website</a><br>
+    <a href="https://drive.google.com/drive/u/1/folders/0B65DH-sSwkNAVV9odEpiUXF5bE0">drive</a><br>
+    <a href="https://classroom.google.com/h">google classroom</a><br>
+    <a href="https://teach.classdojo.com/">ClassDojo</a><br>
+  </div>
+</div>
