--- a/infoIntro/index.html
+++ b/infoIntro/index.html
@@ -86,17 +86,18 @@
   <section>
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6">
+        <div class="col-md-6 order-1">
           <div class="p-5">
             <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=403" alt="">
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 order-2">
           <div class="p-5">
             <h2 class="display-4">英文打字練習</h2>
             <p>天下武功 唯快不破</p>
             <p>要把資訊科學好，就要先練成打字神速無影手！<br>
               (大概啦?)</p>
+            <p>f(n) = 2*n + 30 ， 測5次取較高分的3次平均</p>
           </div>
         </div>
       </div>
@@ -108,10 +109,33 @@
       <div class="row align-items-center">
         <div class="col-md-6 order-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=371" alt="">
+            <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1455390582262-044cdead277a?dpr=2&auto=format&fit=scale&w=300&h=300&q=80" alt="">
           </div>
         </div>
         <div class="col-md-6 order-1">
+          <div class="p-5">
+            <h2 class="display-4">部落格寫作</h2>
+            <p>這是網路訊息爆炸的時代</p>
+            <p>充滿直播、影片、照片，或者只有一句話的即時訊息</p>
+            <p>想當年無名小站還在的時候...我們是怎麼思考的...?</p>
+            <p>(幾乎)每週一篇部落格文章，400字以上原創文字，嚴禁抄襲</p>
+            <p>如果是閱讀文章/新聞產生的心得，請附參考資料連結</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-1">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=371" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 order-2">
           <div class="p-5">
             <h2 class="display-4">旅遊計畫書</h2>
             <p>放心吧其實沒有要出去玩 :p</p>
@@ -126,13 +150,13 @@
   <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6 order-1">
+          <div class="col-md-6 order-2">
             <div class="p-5">
               <!--<img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=1" alt="">-->
               <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?dpr=1&auto=format&fit=crop&w=500&h=500&q=80&cs=tinysrgb&crop=" alt="">
             </div>
           </div>
-          <div class="col-md-6 order-2">
+          <div class="col-md-6 order-1">
             <div class="p-5">
               <h2 class="display-4">C語言程式設計入門</h2>
               <p>學習程式設計不是要每個人都成為軟體工程師，而是訓練系統化解決問題的方法和邏輯思維</p>
