target: default _blank , WinWTS on index.php

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,8 @@
     <link href="css/one-page-wonder.css" rel="stylesheet">
 
     <link href="css/font-zh.css" rel="stylesheet">
+
+    <base target="_blank">
   </head>
 
   <body>
@@ -23,28 +25,28 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href=".">老狼的課</a>
+        <a target="_self" class="navbar-brand" href=".">老狼的課</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">資訊科技概論
+              <a target="_self" class="nav-link" href="index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="timeTable.html">進度表</a>
+              <a target="_self" class="nav-link" href="timeTable.html">進度表</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">關於我</a>
+              <a target="_self" class="nav-link" href="about.html">關於我</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info-system.html">麗山資訊系統</a>
+              <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TBA...</a>
+              <a target="_self" class="nav-link" href="#">TBA...</a>
             </li>
           </ul>
         </div>
@@ -97,6 +99,7 @@
             <p>天下武功 唯快不破</p>
             <p>要把資訊科學好，就要先練成打字神速無影手！<br>
               (大概啦?)</p>
+            <p>打字測驗程式 - <a href="https://drive.google.com/open?id=0B65DH-sSwkNARVJjbHVZSlZxc00">WinWTS</a></p>
             <p>f(n) = 2*n + 30 ， 測5次取較高分的3次平均</p>
           </div>
         </div>
