--- a/html/timeTable.html
+++ b/html/timeTable.html
@@ -16,6 +16,8 @@
     <link href="css/one-page-wonder.css" rel="stylesheet">
 
     <link href="css/font-zh.css" rel="stylesheet">
+
+    <base target="_blank">
   </head>
 
   <body>
@@ -23,28 +25,28 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href=".">老狼的課</a>
+        <a target="_self" class="navbar-brand" href=".">老狼的課</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">資訊科技概論
+              <a target="_self" class="nav-link" href="index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="timeTable.html">進度表</a>
+              <a target="_self" class="nav-link" href="timeTable.html">進度表</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">關於我</a>
+              <a target="_self" class="nav-link" href="about.html">關於我</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info-system.html">麗山資訊系統</a>
+              <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TBA...</a>
+              <a target="_self" class="nav-link" href="#">TBA...</a>
             </li>
           </ul>
         </div>
@@ -70,7 +72,7 @@
             <!--<iframe src="https://docs.google.com/document/d/e/2PACX-1vSW58K6HNsXIr2Z6zhvVxJKW6HVZvd_f1WB85ZWLnCpv2wrGJaKrRUwQIc54c8E6Oy6qvACVCuubePP/pub?embedded=true" width="100%" height="2048" title="1061資訊科技概論進度表 101班、107班" style="border:#EEE solid 1px"></iframe>-->
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW58K6HNsXIr2Z6zhvVxJKW6HVZvd_f1WB85ZWLnCpv2wrGJaKrRUwQIc54c8E6Oy6qvACVCuubePP/pub" width="100%" height="1200" title="1061資訊科技概論進度表 101班、107班" style="border:#EEE solid 1px"></iframe>
             <!--<iframe src="https://docs.google.com/document/preview?hgd=1&amp;id=13yQ7Ezk6sygA_PF3ObNMYlKcHgAVYdYlzk0cUcKqcHQ" width="100%" height="1024" title="1052資訊科技概論進度表 104班、105班、106班、107班" frameborder="0"></iframe>-->
-            <a target="_blank" href="https://docs.google.com/document/d/1AxXJxPZ6FFiQH76jo2Jbp5vMemjDocTin8KEfWbsxUM/edit">doc</a>
+            <a href="https://docs.google.com/document/d/1AxXJxPZ6FFiQH76jo2Jbp5vMemjDocTin8KEfWbsxUM/edit">doc</a>
           </div>
         </div>
       </div>
