--- a/html/about.html
+++ b/html/about.html
@@ -16,6 +16,8 @@
     <link href="css/one-page-wonder.css" rel="stylesheet">
 
     <link href="css/font-zh.css" rel="stylesheet">
+
+    <base target="_blank">
   </head>
 
   <body>
@@ -23,28 +25,28 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href=".">老狼的課</a>
+        <a target="_self" class="navbar-brand" href=".">老狼的課</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">資訊科技概論
+              <a target="_self" class="nav-link" href="index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="timeTable.html">進度表</a>
+              <a target="_self" class="nav-link" href="timeTable.html">進度表</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="about.html">關於我</a>
+              <a target="_self" class="nav-link" href="about.html">關於我</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info-system.html">麗山資訊系統</a>
+              <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TBA...</a>
+              <a target="_self" class="nav-link" href="#">TBA...</a>
             </li>
           </ul>
         </div>
