--- a/html/tour-plan.html
+++ b/html/tour-plan.html
@@ -56,7 +56,7 @@
               <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
             </li>
             <li class="nav-item active">
-              <a target="_self" class="nav-link" href="info-system.html">旅遊計畫書</a>
+              <a target="_self" class="nav-link" href="tour-plan.html">旅遊計畫書</a>
             </li>
             <li class="nav-item">
               <a target="_self" class="nav-link" href="#">TBA...</a>
