--- a/html/Cpp-programming/index.html
+++ b/html/Cpp-programming/index.html
@@ -1,19 +1,4 @@
-<?php
-// parameters: $title, $active
-
-if (!isset($active)) $active=Null;
-function a($id) {
-    global $active;
-    if (is_array($active)) {
-      if (in_array($id, $active)) return " active";
-      else              return "";
-    }
-    else {
-      if ($active==$id) return " active";
-      else              return "";
-    }
-}
-?><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
 
@@ -22,7 +7,7 @@ function a($id) {
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title><?=isset($title)?$title:"老狼的資科概"?></title>
+    <title>老狼的資科概</title>
 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106338304-1"></script>
@@ -35,12 +20,12 @@ function a($id) {
 </script>
 
     <!-- Bootstrap core CSS -->
-    <link href="<?=l('vendor/bootstrap/css/bootstrap.min.css')?>" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="<?=l('css/one-page-wonder.css')?>" rel="stylesheet">
+    <link href="../css/one-page-wonder.css" rel="stylesheet">
 
-    <link href="<?=l('css/font-zh.css')?>" rel="stylesheet">
+    <link href="../css/font-zh.css" rel="stylesheet">
 
     <style>
       @media (min-width: 992px) {
@@ -99,34 +84,73 @@ function a($id) {
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item<?=a(1)?>">
-              <a target="_self" class="nav-link" href="<?=l('index.html')?>">資訊科技概論
+            <li class="nav-item">
+              <a target="_self" class="nav-link" href="../index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item<?=a(2)?>">
-              <a target="_self" class="nav-link" href="<?=l('timeTable.html')?>">進度表</a>
+            <li class="nav-item active">
+              <a target="_self" class="nav-link" href="../timeTable.html">進度表</a>
             </li>
-            <li class="nav-item<?=a(3)?>">
-              <a target="_self" class="nav-link" href="<?=l('about.html')?>">關於我</a>
+            <li class="nav-item">
+              <a target="_self" class="nav-link" href="../about.html">關於我</a>
             </li>
-            <li class="nav-item<?=a(4)?>">
-              <a target="_self" class="nav-link" href="<?=l('info-system.php')?>">麗山資訊系統</a>
+            <li class="nav-item">
+              <a target="_self" class="nav-link" href="../info-system.html">麗山資訊系統</a>
             </li>
-            <li class="nav-item<?=a(5)?>">
-              <a target="_self" class="nav-link" href="<?=l('tour-plan.php')?>">旅遊計畫書</a>
+            <li class="nav-item">
+              <a target="_self" class="nav-link" href="../tour-plan.html">旅遊計畫書</a>
             </li>
-            <li class="nav-item dropdown<?=a(6)?>">
+            <li class="nav-item dropdown">
               <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C語言程式設計<b class="caret"></b></a>
               <div class="dropdown-menu bg-dark" aria-labelledby="drop1">
                 <ul class="navbar-nav-vert ml-auto" role="menu">
-                  <li class="nav-item<?=a(61)?>"><a target="_self" class="nav-link" href="<?=l('Cpp-programming/index.php')?>">C++程式設計</a></li>
-                  <li class="nav-item<?=a(62)?>"><a target="_self" class="nav-link" href="<?=l('Cpp-programming/conditions.php')?>">條件式</a></li>
-                  <li class="nav-item<?=a(63)?>"><a target="_self" class="nav-link" href="<?=l('Cpp-programming/loops.php')?>">迴圈</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/index.html">C++程式設計</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/conditions.html">條件式</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/loops.html">迴圈</a></li>
                 </ul>
               </div>
             </li>
           </ul>
         </div>
       </div>
-    </nav>
+    </nav>    <!-- Header -->
+    <header class="masthead" style="background: url('https://unsplash.it/1900/1080?image=668') no-repeat center center scroll">
+    <div class="overlay">
+      <div class="container">
+        <h1 class="display-1 text-white">資訊科技概論</h1>
+        <h2 class="display-4 text-white">C++程式設計</h2>
+        <p class="text-white"><del>！＠＄）！＠＃（！？，。＠！『＃！＠＃－＃＠</del></p>
+      </div>
+    </div>
+  </header>
+
+  <!-- Main -->
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-12 order-1">
+          <div class="p-5">
+            <h2 style="font-size:100px; text-align:center">T.B.A.</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+        <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; wolfdigit@LSSH 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  </body>
+
+</html>
