--- a/html/Cpp-programming/loops.html
+++ b/html/Cpp-programming/loops.html
@@ -20,12 +20,12 @@
 </script>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/one-page-wonder.css" rel="stylesheet">
+    <link href="../css/one-page-wonder.css" rel="stylesheet">
 
-    <link href="css/font-zh.css" rel="stylesheet">
+    <link href="../css/font-zh.css" rel="stylesheet">
 
     <style>
       @media (min-width: 992px) {
@@ -85,29 +85,29 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="index.html">資訊科技概論
+              <a target="_self" class="nav-link" href="../index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item active">
-              <a target="_self" class="nav-link" href="timeTable.html">進度表</a>
+            <li class="nav-item">
+              <a target="_self" class="nav-link" href="../timeTable.html">進度表</a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="about.html">關於我</a>
+              <a target="_self" class="nav-link" href="../about.html">關於我</a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
+              <a target="_self" class="nav-link" href="../info-system.html">麗山資訊系統</a>
             </li>
             <li class="nav-item">
-              <a target="_self" class="nav-link" href="tour-plan.html">旅遊計畫書</a>
+              <a target="_self" class="nav-link" href="../tour-plan.html">旅遊計畫書</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown active">
               <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C語言程式設計<b class="caret"></b></a>
               <div class="dropdown-menu bg-dark" aria-labelledby="drop1">
                 <ul class="navbar-nav-vert ml-auto" role="menu">
-                  <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/index.html">C++程式設計</a></li>
-                  <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/conditions.html">條件式</a></li>
-                  <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/loops.html">迴圈</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/index.html">C++程式設計</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/conditions.html">條件式</a></li>
+                  <li class="nav-item active"><a target="_self" class="nav-link" href="../Cpp-programming/loops.html">迴圈</a></li>
                 </ul>
               </div>
             </li>
@@ -119,29 +119,61 @@
     <div class="overlay">
       <div class="container">
         <h1 class="display-1 text-white">資訊科技概論</h1>
-        <h2 class="display-4 text-white">106上 進度表</h2>
-        <p class="text-white"><del>這一頁完全不潮...QQ</del></p>
+        <h2 class="display-4 text-white">C++程式設計</h2>
+        <p class="text-white">迴圈</p>
       </div>
     </div>
   </header>
-
-  <!-- Main -->
-  <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-12 order-1">
-          <div class="p-5">
-            <!--<iframe src="https://docs.google.com/document/preview?id=1AxXJxPZ6FFiQH76jo2Jbp5vMemjDocTin8KEfWbsxUM" width="100%" height="1024" title="1061資訊科技概論進度表 101班、107班" frameborder="0"></iframe>-->
-            <!--<iframe src="https://docs.google.com/document/d/e/2PACX-1vSW58K6HNsXIr2Z6zhvVxJKW6HVZvd_f1WB85ZWLnCpv2wrGJaKrRUwQIc54c8E6Oy6qvACVCuubePP/pub?embedded=true" width="100%" height="2048" title="1061資訊科技概論進度表 101班、107班" style="border:#EEE solid 1px"></iframe>-->
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW58K6HNsXIr2Z6zhvVxJKW6HVZvd_f1WB85ZWLnCpv2wrGJaKrRUwQIc54c8E6Oy6qvACVCuubePP/pub" width="100%" height="1200" title="1061資訊科技概論進度表 101班、107班" style="border:#EEE solid 1px"></iframe>
-            <!--<iframe src="https://docs.google.com/document/preview?hgd=1&amp;id=13yQ7Ezk6sygA_PF3ObNMYlKcHgAVYdYlzk0cUcKqcHQ" width="100%" height="1024" title="1052資訊科技概論進度表 104班、105班、106班、107班" frameborder="0"></iframe>-->
-            <a href="https://docs.google.com/document/d/1AxXJxPZ6FFiQH76jo2Jbp5vMemjDocTin8KEfWbsxUM/edit">doc</a>
-          </div>
+  <style>
+    .probNum {
+      width: 100px;
+      height: 100px;      
+      line-height: 100px;
+      font-size: 70px;
+      border-radius: 50%;
+      background-color: #9CF;
+      color: white;
+      font-weight: bold;
+      text-align: center;
+    }
+  </style>
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-2 order-1">
+        <div class="p-5">
+          <div class="probNum">1</div>
+        </div>
+      </div>
+      <div class="col-md-10 order-2">
+        <div class="p-5">
+          <p>T.B.A.</p>
         </div>
       </div>
     </div>
-  </section>
+    <div class="row align-items-center">
+            <div class="col-md-6">
+        <div class="p-1">
+          <pre class="probRun"></pre>
+        </div>
+      </div>
+            <div class="col-md-6">
+        <div class="p-1">
+          <pre class="probRun"></pre>
+        </div>
+      </div>
+          </div>
+    <div class="row align-items-center">
+      <div class="col-md-12 order-2">
+        <div class="p-1">
+          T.B.A.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
+  
         <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
@@ -151,9 +183,9 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
 
