--- a/infoIntro/Cpp-programming/conditions.html
+++ b/infoIntro/Cpp-programming/conditions.html
@@ -56,17 +56,25 @@
       pre.probRun i {
         font-style: normal;
         font-family: inherit;
-        animation: blink-animation 0.8s steps(4, start) infinite;
-        -webkit-animation: blink-animation 0.8s steps(4, start) infinite;
+        animation: blink-animation 0.8s steps(2, start) infinite;
+        -webkit-animation: blink-animation 0.8s steps(2, start) infinite;
       }
       @keyframes blink-animation {
+        from {
+          color: inherit;
+        }
         to {
-          visibility: hidden;
+          /*visibility: hidden;*/
+          color: gray;
         }
       }
       @-webkit-keyframes blink-animation {
+        from {
+          color: inherit;
+        }
         to {
-          visibility: hidden;
+          /*visibility: hidden;*/
+          color: gray;
         }
       }
     </style>
@@ -78,7 +86,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a target="_self" class="navbar-brand" href=".">老狼的課</a>
+        <a target="_self" class="navbar-brand" href=".">老狼的資科概</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -102,10 +110,11 @@
               <a target="_self" class="nav-link" href="../tour-plan.html">旅遊計畫書</a>
             </li>
             <li class="nav-item dropdown active">
-              <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C語言程式設計<b class="caret"></b></a>
+              <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C++程式設計<b class="caret"></b></a>
               <div class="dropdown-menu bg-dark" aria-labelledby="drop1">
                 <ul class="navbar-nav-vert ml-auto" role="menu">
                   <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/index.html">C++程式設計</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/basic.html">基本題</a></li>
                   <li class="nav-item active"><a target="_self" class="nav-link" href="../Cpp-programming/conditions.html">條件式</a></li>
                   <li class="nav-item"><a target="_self" class="nav-link" href="../Cpp-programming/loops.html">迴圈</a></li>
                 </ul>
@@ -142,7 +151,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">1</div>
+          <div class="probNum">a1</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -152,15 +161,15 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入一正整數，判斷此數是否為一個奇數或偶數。
 請輸入此數：<i>55</i>
 <i>55</i>為奇數</pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入一正整數，判斷此數是否為一個奇數或偶數。
 請輸入此數：<i>56</i>
 <i>56</i>為偶數</pre>
@@ -170,11 +179,20 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-a1-0">ans1</button>
+                </div>
       </div>
     </div>
-  </div>
+        <div class="modal fade" id="mdl-ans-a1-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">a1-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-a1-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+      </div>
 </section>
 
   <section>
@@ -182,7 +200,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">2</div>
+          <div class="probNum">a2</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -192,15 +210,15 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入兩正整數，判斷此二數是否為一個奇數與一個偶數。
 請輸入此二數：<i>55 56</i>
 <i>55,56</i>恰為一個奇數與一個偶數</pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入兩正整數，判斷此二數是否為一個奇數與一個偶數。
 請輸入此二數：<i>55 55</i>
 <i>55,55</i>不為一個奇數與一個偶數</pre>
@@ -210,11 +228,20 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mdl-ans-a2-0">ans1</button>
+                </div>
       </div>
     </div>
-  </div>
+        <div class="modal fade" id="mdl-ans-a2-0" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg" role="document"><div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">a2-0</h5></div>
+        <div class="modal-body">
+          <img src="ans-a2-0.png"></img>
+        </div>
+        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div>
+      </div></div>
+    </div>
+      </div>
 </section>
 
   <section>
@@ -222,7 +249,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">3</div>
+          <div class="probNum">a3</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -233,29 +260,29 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入月份，判斷此月份在四季中的哪一季
 請輸入月份：<i>5</i>
 <i>春</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入月份，判斷此月份在四季中的哪一季
 請輸入月份：<i>55</i>
 <i>不要亂打</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入月份，判斷此月份在四季中的哪一季
 請輸入月份：<i>8</i>
 <i>夏</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入月份，判斷此月份在四季中的哪一季
 請輸入月份：<i>12</i>
 <i>冬</i></pre>
@@ -265,11 +292,10 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                </div>
       </div>
     </div>
-  </div>
+      </div>
 </section>
 
   <section>
@@ -277,7 +303,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">4</div>
+          <div class="probNum">a4</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -287,15 +313,15 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入三數，找出最大值與最小值。
 請輸入此三數：<i>3 4 5</i>
 (<i>3,4,5</i>)中，最大值為<i>5</i> 最小值為<i>3</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">輸入三數，找出最大值與最小值。
 請輸入此三數：<i>5 5 6</i>
 (<i>5,5,6</i>)中，最大值為<i>6</i> 最小值為<i>5</i></pre>
@@ -305,11 +331,10 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                </div>
       </div>
     </div>
-  </div>
+      </div>
 </section>
 
   <section>
@@ -317,7 +342,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">5</div>
+          <div class="probNum">a5</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -327,29 +352,29 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">判斷一個輸入的數字是否為兩位數整數
 請輸入此數字=<i>35</i>
 <i>35為</i>兩位數整數</pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">判斷一個輸入的數字是否為兩位數整數
 請輸入此數字=<i>355</i>
 <i>355不為</i>兩位數整數</pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">判斷一個輸入的數字是否為兩位數整數
 請輸入此數字=<i>-35</i>
 <i>-35為</i>兩位數整數</pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">判斷一個輸入的數字是否為兩位數整數
 請輸入此數字=<i>-355</i>
 <i>-355不為</i>兩位數整數</pre>
@@ -359,11 +384,10 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                </div>
       </div>
     </div>
-  </div>
+      </div>
 </section>
 
   <section>
@@ -371,7 +395,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">6</div>
+          <div class="probNum">a6</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -386,8 +410,8 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">本程式將計算BMI，並判斷體位是否標準。
 請輸入身高（M）：<i>1.75</i>
 請輸入體重（Kg）：<i>70</i>
@@ -395,8 +419,8 @@
 <i>標準體重</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">本程式將計算BMI，並判斷體位是否標準。
 請輸入身高（M）：<i>1.8</i>
 請輸入體重（Kg）：<i>120</i>
@@ -408,11 +432,10 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                </div>
       </div>
     </div>
-  </div>
+      </div>
 </section>
 
   <section>
@@ -420,7 +443,7 @@
     <div class="row align-items-center">
       <div class="col-md-2 order-1">
         <div class="p-5">
-          <div class="probNum">7</div>
+          <div class="probNum">a7</div>
         </div>
       </div>
       <div class="col-md-10 order-2">
@@ -431,31 +454,31 @@
       </div>
     </div>
     <div class="row align-items-center">
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">本程式將輸入任意三邊長，判斷可否構成三角形？並判斷構成哪一種三角形。
 請輸入三個邊長數值，並以空白鍵隔開：<i>3 4 5</i>
 <i>3 4 5可以</i>構成三角形
 為<i>直角三角形</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">本程式將輸入任意三邊長，判斷可否構成三角形？並判斷構成哪一種三角形。
 請輸入三個邊長數值，並以空白鍵隔開：<i>80 90 100</i>
 <i>80 90 100可以</i>構成三角形
 為<i>鈍角三角形</i></pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">本程式將輸入任意三邊長，判斷可否構成三角形？並判斷構成哪一種三角形。
 請輸入三個邊長數值，並以空白鍵隔開：<i>30 40 500</i>
 <i>30 40 500無法</i>構成三角形</pre>
         </div>
       </div>
-            <div class="col-md-6">
-        <div class="p-1">
+                  <div class="col-md-6">
+              <div class="p-1">
           <pre class="probRun">本程式將輸入任意三邊長，判斷可否構成三角形？並判斷構成哪一種三角形。
 請輸入三個邊長數值，並以空白鍵隔開：<i>90 20 100</i>
 <i>90 20 100可以</i>構成三角形
@@ -466,11 +489,10 @@
     <div class="row align-items-center">
       <div class="col-md-12 order-2">
         <div class="p-1">
-          T.B.A.
-        </div>
+                </div>
       </div>
     </div>
-  </div>
+      </div>
 </section>
 
   
