--- a/infoIntro/timeTable.html
+++ b/infoIntro/timeTable.html
@@ -56,17 +56,25 @@
       pre.probRun i {
         font-style: normal;
         font-family: inherit;
-        animation: blink-animation 0.8s steps(4, start) infinite;
-        -webkit-animation: blink-animation 0.8s steps(4, start) infinite;
+        animation: blink-animation 0.8s steps(2, start) infinite;
+        -webkit-animation: blink-animation 0.8s steps(2, start) infinite;
       }
       @keyframes blink-animation {
+        from {
+          color: inherit;
+        }
         to {
-          visibility: hidden;
+          /*visibility: hidden;*/
+          color: gray;
         }
       }
       @-webkit-keyframes blink-animation {
+        from {
+          color: inherit;
+        }
         to {
-          visibility: hidden;
+          /*visibility: hidden;*/
+          color: gray;
         }
       }
     </style>
@@ -78,7 +86,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a target="_self" class="navbar-brand" href=".">老狼的課</a>
+        <a target="_self" class="navbar-brand" href=".">老狼的資科概</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -102,10 +110,11 @@
               <a target="_self" class="nav-link" href="tour-plan.html">旅遊計畫書</a>
             </li>
             <li class="nav-item dropdown">
-              <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C語言程式設計<b class="caret"></b></a>
+              <a target="_self" href="#" id="drop1" class="nav-link dropdown-toggle" data-toggle="dropdown">C++程式設計<b class="caret"></b></a>
               <div class="dropdown-menu bg-dark" aria-labelledby="drop1">
                 <ul class="navbar-nav-vert ml-auto" role="menu">
                   <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/index.html">C++程式設計</a></li>
+                  <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/basic.html">基本題</a></li>
                   <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/conditions.html">條件式</a></li>
                   <li class="nav-item"><a target="_self" class="nav-link" href="Cpp-programming/loops.html">迴圈</a></li>
                 </ul>
